Mise à jour de requirements.txt avec toutes les dépendances nécessaires

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
-yfinance
+streamlit
+matplotlib
 numpy
 pandas
+yfinance
 plotly
+scipy
 scikit-learn
-matplotlib
-xgboost
-PyPortfolioOpt
-openpyxl
-seaborn
-pandas_datareader
-Quandl
-pyportfolioopt
+pandas-datareader
+quandl
 pypfopt
-
+requests
+Pillow
